# swagger/v1/swagger.json
@@ -67,20 +67,20 @@
                 {
                   "id": 4,
                   "name": "Caregiver name 4",
-                  "created_at": "2019-07-03T20:26:21.447Z",
-                  "updated_at": "2019-07-03T20:26:21.447Z"
+                  "created_at": "2019-07-04T03:25:54.058Z",
+                  "updated_at": "2019-07-04T03:25:54.058Z"
                 },
                 {
                   "id": 5,
                   "name": "Caregiver name 5",
-                  "created_at": "2019-07-03T20:26:21.449Z",
-                  "updated_at": "2019-07-03T20:26:21.449Z"
+                  "created_at": "2019-07-04T03:25:54.061Z",
+                  "updated_at": "2019-07-04T03:25:54.061Z"
                 },
                 {
                   "id": 6,
                   "name": "Caregiver name 6",
-                  "created_at": "2019-07-03T20:26:21.451Z",
-                  "updated_at": "2019-07-03T20:26:21.451Z"
+                  "created_at": "2019-07-04T03:25:54.063Z",
+                  "updated_at": "2019-07-04T03:25:54.063Z"
                 }
               ]
             },
@@ -105,8 +105,8 @@
               "application/json": {
                 "id": 7,
                 "name": "Eduardo",
-                "created_at": "2019-07-03T20:26:21.461Z",
-                "updated_at": "2019-07-03T20:26:21.461Z"
+                "created_at": "2019-07-04T03:25:54.072Z",
+                "updated_at": "2019-07-04T03:25:54.072Z"
               }
             },
             "description": "Caregiver created"
@@ -142,8 +142,8 @@
               "application/json": {
                 "id": 8,
                 "name": "Caregiver name 7",
-                "created_at": "2019-07-03T20:26:21.467Z",
-                "updated_at": "2019-07-03T20:26:21.467Z"
+                "created_at": "2019-07-04T03:25:54.080Z",
+                "updated_at": "2019-07-04T03:25:54.080Z"
               }
             },
             "description": "Return the selected Caregiver"
@@ -182,8 +182,8 @@
               "application/json": {
                 "id": 9,
                 "name": "New Name",
-                "created_at": "2019-07-03T20:26:21.492Z",
-                "updated_at": "2019-07-03T20:26:21.496Z"
+                "created_at": "2019-07-04T03:25:54.102Z",
+                "updated_at": "2019-07-04T03:25:54.109Z"
               }
             },
             "description": "Caregiver updated"
@@ -268,20 +268,20 @@
                 {
                   "id": 4,
                   "name": "John Doe 4",
-                  "created_at": "2019-07-03T20:26:21.550Z",
-                  "updated_at": "2019-07-03T20:26:21.550Z"
+                  "created_at": "2019-07-04T03:25:54.172Z",
+                  "updated_at": "2019-07-04T03:25:54.172Z"
                 },
                 {
                   "id": 5,
                   "name": "John Doe 5",
-                  "created_at": "2019-07-03T20:26:21.552Z",
-                  "updated_at": "2019-07-03T20:26:21.552Z"
+                  "created_at": "2019-07-04T03:25:54.176Z",
+                  "updated_at": "2019-07-04T03:25:54.176Z"
                 },
                 {
                   "id": 6,
                   "name": "John Doe 6",
-                  "created_at": "2019-07-03T20:26:21.554Z",
-                  "updated_at": "2019-07-03T20:26:21.554Z"
+                  "created_at": "2019-07-04T03:25:54.178Z",
+                  "updated_at": "2019-07-04T03:25:54.178Z"
                 }
               ]
             },
@@ -306,8 +306,8 @@
               "application/json": {
                 "id": 7,
                 "name": "Eduardo",
-                "created_at": "2019-07-03T20:26:21.567Z",
-                "updated_at": "2019-07-03T20:26:21.567Z"
+                "created_at": "2019-07-04T03:25:54.189Z",
+                "updated_at": "2019-07-04T03:25:54.189Z"
               }
             },
             "description": "Client created"
@@ -343,8 +343,8 @@
               "application/json": {
                 "id": 8,
                 "name": "John Doe 7",
-                "created_at": "2019-07-03T20:26:21.576Z",
-                "updated_at": "2019-07-03T20:26:21.576Z"
+                "created_at": "2019-07-04T03:25:54.200Z",
+                "updated_at": "2019-07-04T03:25:54.200Z"
               }
             },
             "description": "Return the selected Client"
@@ -383,8 +383,8 @@
               "application/json": {
                 "id": 9,
                 "name": "New Name",
-                "created_at": "2019-07-03T20:26:21.594Z",
-                "updated_at": "2019-07-03T20:26:21.598Z"
+                "created_at": "2019-07-04T03:25:54.218Z",
+                "updated_at": "2019-07-04T03:25:54.222Z"
               }
             },
             "description": "Client updated"
@@ -479,22 +479,22 @@
                   "id": 4,
                   "name": "My Dog 4",
                   "client_id": 12,
-                  "created_at": "2019-07-03T20:26:21.688Z",
-                  "updated_at": "2019-07-03T20:26:21.688Z"
+                  "created_at": "2019-07-04T03:25:54.318Z",
+                  "updated_at": "2019-07-04T03:25:54.318Z"
                 },
                 {
                   "id": 5,
                   "name": "My Dog 5",
                   "client_id": 12,
-                  "created_at": "2019-07-03T20:26:21.690Z",
-                  "updated_at": "2019-07-03T20:26:21.690Z"
+                  "created_at": "2019-07-04T03:25:54.321Z",
+                  "updated_at": "2019-07-04T03:25:54.321Z"
                 },
                 {
                   "id": 6,
                   "name": "My Dog 6",
                   "client_id": 12,
-                  "created_at": "2019-07-03T20:26:21.692Z",
-                  "updated_at": "2019-07-03T20:26:21.692Z"
+                  "created_at": "2019-07-04T03:25:54.323Z",
+                  "updated_at": "2019-07-04T03:25:54.323Z"
                 }
               ]
             },
@@ -520,8 +520,8 @@
                 "id": 7,
                 "name": "Rufus",
                 "client_id": 13,
-                "created_at": "2019-07-03T20:26:21.708Z",
-                "updated_at": "2019-07-03T20:26:21.708Z"
+                "created_at": "2019-07-04T03:25:54.343Z",
+                "updated_at": "2019-07-04T03:25:54.343Z"
               }
             },
             "description": "Client created"
@@ -567,8 +567,8 @@
                 "id": 8,
                 "name": "My Dog 7",
                 "client_id": 14,
-                "created_at": "2019-07-03T20:26:21.718Z",
-                "updated_at": "2019-07-03T20:26:21.718Z"
+                "created_at": "2019-07-04T03:25:54.353Z",
+                "updated_at": "2019-07-04T03:25:54.353Z"
               }
             },
             "description": "Return the selected Dog"
@@ -602,8 +602,8 @@
                 "client_id": 15,
                 "id": 9,
                 "name": "New Name",
-                "created_at": "2019-07-03T20:26:21.734Z",
-                "updated_at": "2019-07-03T20:26:21.744Z"
+                "created_at": "2019-07-04T03:25:54.368Z",
+                "updated_at": "2019-07-04T03:25:54.377Z"
               }
             },
             "description": "Client updated"
@@ -694,30 +694,30 @@
               "application/json": [
                 {
                   "id": 4,
-                  "status": "MyString",
+                  "status": "scheduled",
                   "lat": 1,
                   "lon": 1,
                   "caregiver_id": 14,
-                  "created_at": "2019-07-03T20:26:21.879Z",
-                  "updated_at": "2019-07-03T20:26:21.879Z"
+                  "created_at": "2019-07-04T03:25:54.520Z",
+                  "updated_at": "2019-07-04T03:25:54.520Z"
                 },
                 {
                   "id": 5,
-                  "status": "MyString",
+                  "status": "scheduled",
                   "lat": 1,
                   "lon": 1,
                   "caregiver_id": 15,
-                  "created_at": "2019-07-03T20:26:21.891Z",
-                  "updated_at": "2019-07-03T20:26:21.891Z"
+                  "created_at": "2019-07-04T03:25:54.535Z",
+                  "updated_at": "2019-07-04T03:25:54.535Z"
                 },
                 {
                   "id": 6,
-                  "status": "MyString",
+                  "status": "scheduled",
                   "lat": 1,
                   "lon": 1,
                   "caregiver_id": 16,
-                  "created_at": "2019-07-03T20:26:21.902Z",
-                  "updated_at": "2019-07-03T20:26:21.902Z"
+                  "created_at": "2019-07-04T03:25:54.549Z",
+                  "updated_at": "2019-07-04T03:25:54.549Z"
                 }
               ]
             },
@@ -741,12 +741,12 @@
             "examples": {
               "application/json": {
                 "id": 7,
-                "status": "asdf",
+                "status": "started",
                 "lat": 1,
                 "lon": 2,
                 "caregiver_id": 17,
-                "created_at": "2019-07-03T20:26:21.929Z",
-                "updated_at": "2019-07-03T20:26:21.929Z"
+                "created_at": "2019-07-04T03:25:54.584Z",
+                "updated_at": "2019-07-04T03:25:54.584Z"
               }
             },
             "description": "Walking created"
@@ -781,26 +781,26 @@
             "examples": {
               "application/json": {
                 "id": 8,
-                "status": "MyString",
+                "status": "scheduled",
                 "lat": 1,
                 "lon": 1,
                 "caregiver_id": 18,
-                "created_at": "2019-07-03T20:26:21.947Z",
-                "updated_at": "2019-07-03T20:26:21.947Z",
+                "created_at": "2019-07-04T03:25:54.607Z",
+                "updated_at": "2019-07-04T03:25:54.607Z",
                 "dogs": [
                   {
                     "id": 25,
                     "name": "My Dog 24",
                     "client_id": 26,
-                    "created_at": "2019-07-03T20:26:21.943Z",
-                    "updated_at": "2019-07-03T20:26:21.943Z"
+                    "created_at": "2019-07-04T03:25:54.600Z",
+                    "updated_at": "2019-07-04T03:25:54.600Z"
                   },
                   {
                     "id": 26,
                     "name": "My Dog 25",
                     "client_id": 26,
-                    "created_at": "2019-07-03T20:26:21.944Z",
-                    "updated_at": "2019-07-03T20:26:21.944Z"
+                    "created_at": "2019-07-04T03:25:54.602Z",
+                    "updated_at": "2019-07-04T03:25:54.602Z"
                   }
                 ]
               }
@@ -837,9 +837,9 @@
                 "caregiver_id": 19,
                 "lat": 1,
                 "lon": 1,
-                "status": "MyString",
-                "created_at": "2019-07-03T20:26:21.982Z",
-                "updated_at": "2019-07-03T20:26:21.982Z"
+                "status": "scheduled",
+                "created_at": "2019-07-04T03:25:54.643Z",
+                "updated_at": "2019-07-04T03:25:54.643Z"
               }
             },
             "description": "Walking updated"
@@ -907,6 +907,96 @@
           "walkings"
         ],
         "summary": "Delete Walking",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ]
+      }
+    },
+    "/api/v1/walkings/{id}/start_walk": {
+      "put": {
+        "responses": {
+          "202": {
+            "examples": {
+              "application/json": {
+                "id": 12,
+                "status": "started",
+                "caregiver_id": 22,
+                "lat": 1,
+                "lon": 1,
+                "created_at": "2019-07-04T03:25:54.734Z",
+                "updated_at": "2019-07-04T03:25:54.741Z"
+              }
+            },
+            "description": "Return the selected Walking"
+          },
+          "404": {
+            "examples": {
+              "text/plain": " "
+            },
+            "description": "Walking not found"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true,
+            "description": "walking ID"
+          }
+        ],
+        "tags": [
+          "walkings"
+        ],
+        "summary": "Start Walk",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ]
+      }
+    },
+    "/api/v1/walkings/{id}/finish_walk": {
+      "put": {
+        "responses": {
+          "202": {
+            "examples": {
+              "application/json": {
+                "id": 14,
+                "status": "finished",
+                "caregiver_id": 24,
+                "lat": 1,
+                "lon": 1,
+                "created_at": "2019-07-04T03:25:54.796Z",
+                "updated_at": "2019-07-04T03:25:54.802Z"
+              }
+            },
+            "description": "Return the selected Walking"
+          },
+          "404": {
+            "examples": {
+              "text/plain": " "
+            },
+            "description": "Walking not found"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "required": true,
+            "description": "walking ID"
+          }
+        ],
+        "tags": [
+          "walkings"
+        ],
+        "summary": "Finish Walk",
         "consumes": [
           "application/json"
         ],
